# navaar

./: .env.example  .gitignore  CLAUDE.md  GRAFANA_DASHBOARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.yml
deploy/argocd/: application.yaml
deploy/k8s/: backup-cronjob.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
scripts/: spotify_auth.py
src/navaar/: __init__.py  __main__.py  auth_errors.py  config.py  metrics.py
src/navaar/api/: server.py
src/navaar/db/: engine.py  models.py  repository.py
src/navaar/spotify/: client.py
src/navaar/sync/: _base_pull.py  _base_push.py  _targets.py  engine.py  fanout.py  identifier.py  sp_to_tg.py  sp_to_yt.py  tg_to_sp.py  tg_to_yt.py  yt_to_sp.py  yt_to_tg.py
src/navaar/telegram/: agent.py  alerts.py  bot.py  cards.py  client.py
src/navaar/ytmusic/: client.py  downloader.py
tests/: conftest.py
tests/integration/: test_sync_engine.py
tests/unit/: test_agent.py  test_alerts.py  test_auth_errors.py  test_bot_commands.py  test_cards.py  test_downloader.py  test_identifier.py  test_readyz.py  test_repository.py  test_sp_to_tg.py  test_sp_to_yt.py  test_spotify_client.py  test_tg_to_sp.py  test_tg_to_yt.py  test_yt_to_sp.py  test_yt_to_tg.py
