[project]
name = "navaar"
version = "0.1.0"
description = "Bidirectional music sync between Telegram channel and YouTube Music playlist"
requires-python = ">=3.12"
dependencies = [
    "ytmusicapi>=1.8.0",
    "python-telegram-bot>=21.0",
    "yt-dlp>=2024.1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "prometheus-client>=0.21.0",
    "mutagen>=1.47.0",
    "tenacity>=9.0.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "spotipy>=2.24.0",
]

[project.scripts]
navaar = "navaar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/navaar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
]
